tests/api/snapshots/api__create_user__duplicate_request_with_key_is_201-2.snap
---
source: tests/api/create_user.rs
expression: "&duplicate"
---
{
  "email": "email@mail",
  "id": 1
}
