tests/api/snapshots/api__create_user__duplicate_request_with_key_is_201.snap
---
source: tests/api/create_user.rs
expression: "&original"
---
{
  "email": "email@mail",
  "id": 1
}
