tests/api/snapshots/api__create_user__duplicate_request_without_key_is_409-2.snap
---
source: tests/api/create_user.rs
expression: "&duplicate"
---
{
  "error": "Email first@email Is In Use Already"
}
