tests/api/snapshots/api__create_user__duplicate_request_without_key_is_409.snap
---
source: tests/api/create_user.rs
expression: "&original"
---
{
  "email": "first@email.com",
  "id": 1
}
