tests/api/snapshots/api__create_user__new_user.snap
---
source: tests/api/create_user.rs
expression: "&actual_body"
---
{
  "email": "first@email.com",
  "id": 1
}
